<resources>
    <string name="app_name">Meaty</string>
    <string name="des_app">Beef Quality Scan</string>
    <string name="create_new_account">Create new account</string>
    <string name="signin_account">login to enter</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="have_an_account">Have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="more_menu">More menu</string>
    <string name="description">Description</string>

    <string name="authority">com.damar.meaty</string>
    <string name="no_permission">Did not get permissions</string>
    <string name="choose_pic">Choose a Picture</string>
    <string name="upload_fail">Upload failed</string>
    <string name="upload_success">Upload success</string>
    <string name="description_warning">Please input some description</string>
    <string name="photo_warning">Please input a photo</string>
    <string name="error_field_empty">Please fill all fields!</string>
    <string name="error_minimum_password">Minimum Password is 8 character</string>
    <string name="error_incorrect_email_password">Email or password is incorrect</string>
    <string name="no_data">No data</string>
    <string name="add_story">Add New Story</string>
    <string name="story_details">Story Details</string>
    <string name="story_list">Story List</string>
    <string name="password">Password</string>
    <string name="error_min_char">Minimum characters is 8</string>


    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="logout">Logout</string>

    <string name="timeout">Timeout</string>
    <string name="retry">Try again</string>

    <!--Shared Preference Usage-->
    <string name="pref_name">usertoken</string>
    <string name="user_token">user_token</string>
    <string name="upload_token">upload_token</string>
    <string name="story_image">Story Image</string>
    <string name="story_preview">Story preview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="setting_language">Setting Language</string>
    <string name="back">back</string>
    <string name="created_at">created at</string>
    <string name="created_at_prefix">Create on :</string>
    <string name="result">Return to result</string>
    <string name="gender">Gender</string>
    <string name="region">Region</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="registration_success">Register success</string>
    <string name="work">Work</string>
    <string name="age">Age</string>
</resources>