<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/create_new_account"
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_extrabold"
        android:textColor="@color/darkred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/field_name"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:alpha="0"
        android:background="@drawable/bg_auten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_person_24"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ed_register_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/darkred"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_email"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:alpha="0"
        android:background="@drawable/bg_auten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_name"  >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_email_24"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/ed_register_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/darkred"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_gender"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:alpha="0"
        android:background="@drawable/bg_auten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_email"  >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_animation_24"
            android:inputType="textEmailAddress" />

        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/darkred" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_domisili"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:alpha="0"
        android:background="@drawable/bg_auten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_gender"  >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_map_24"
            android:inputType="textShortMessage" />

        <EditText
            android:id="@+id/ed_register_domisili"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/darkred"
            android:ems="10"
            android:hint="@string/region"
            android:inputType="textShortMessage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_age"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:alpha="0"
        android:background="@drawable/bg_auten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_domisili" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_date_range_24"
            android:inputType="textShortMessage" />

        <EditText
            android:id="@+id/ed_register_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/darkred"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/field_work"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:alpha="0"
        android:background="@drawable/bg_auten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_age" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_work_24"
            android:inputType="textShortMessage" />

        <EditText
            android:id="@+id/ed_register_work"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/darkred"
            android:ems="10"
            android:hint="@string/work"
            android:inputType="textShortMessage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:alpha="0"
        android:background="@drawable/bg_auten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_work">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_key_24"/>

        <com.damar.meaty.customview.MyPassword
            android:id="@+id/ed_register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/darkred"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/field_password"
            app:layout_constraintTop_toTopOf="@+id/field_password"/>

    </LinearLayout>

    <com.damar.meaty.customview.MyButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:text="@string/register"
        android:alpha="0"
        android:translationY="-20dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_password"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:alpha="0"
        android:text="@string/have_an_account"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:alpha="0"
        android:text="@string/login"
        android:textColor="@color/darkred"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

</androidx.constraintlayout.widget.ConstraintLayout>